// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendScreen should render with search: render 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "gap": 32,
      "paddingBottom": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "column",
        "gap": 24,
        "width": "100%",
      }
    }
  >
    <Text
      accessibilityRole="header"
      selectable={true}
      style={
        {
          "color": "hsl(0, 0%, 43.5%)",
          "fontFamily": "System",
          "fontSize": 19.2,
          "fontWeight": "400",
          "lineHeight": 21,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      suppressHighlighting={true}
    >
      SEARCH BY
    </Text>
    <View
      style={
        {
          "position": "relative",
        }
      }
      testID="sendSearchContainer"
    >
      <View
        onLayout={[Function]}
        onSubmit={[Function]}
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "gap": 18,
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <View
            animatedStyle={
              {
                "value": {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
              }
            }
            collapsable={false}
            style={
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <TextInput
              accessibilityLabel="query"
              accessibilityRole="search"
              control={
                {
                  "_defaultValues": {
                    "query": "",
                  },
                  "_disableForm": [Function],
                  "_executeSchema": [Function],
                  "_fields": {
                    "query": {
                      "_f": {
                        "mount": true,
                        "name": "query",
                        "ref": {
                          "name": "query",
                        },
                        "value": "",
                      },
                    },
                  },
                  "_formState": {
                    "dirtyFields": {},
                    "disabled": false,
                    "errors": {},
                    "isDirty": false,
                    "isLoading": false,
                    "isSubmitSuccessful": false,
                    "isSubmitted": false,
                    "isSubmitting": false,
                    "isValid": false,
                    "isValidating": false,
                    "submitCount": 0,
                    "touchedFields": {},
                  },
                  "_formValues": {
                    "query": "",
                  },
                  "_getDirty": [Function],
                  "_getFieldArray": [Function],
                  "_getWatch": [Function],
                  "_names": {
                    "array": Set {},
                    "focus": "",
                    "mount": Set {
                      "query",
                    },
                    "unMount": Set {},
                    "watch": Set {
                      "query",
                    },
                    "watchAll": false,
                  },
                  "_options": {
                    "mode": "onSubmit",
                    "reValidateMode": "onChange",
                    "shouldFocusError": true,
                  },
                  "_proxyFormState": {
                    "dirtyFields": false,
                    "disabled": true,
                    "errors": true,
                    "isDirty": false,
                    "isSubmitting": true,
                    "isValid": true,
                    "isValidating": false,
                    "touchedFields": false,
                  },
                  "_removeUnmounted": [Function],
                  "_reset": [Function],
                  "_resetDefaultValues": [Function],
                  "_state": {
                    "action": false,
                    "mount": true,
                    "watch": false,
                  },
                  "_subjects": {
                    "array": {
                      "next": [Function],
                      "observers": [],
                      "subscribe": [Function],
                      "unsubscribe": [Function],
                    },
                    "state": {
                      "next": [Function],
                      "observers": [
                        {
                          "next": [Function],
                        },
                        {
                          "next": [Function],
                        },
                      ],
                      "subscribe": [Function],
                      "unsubscribe": [Function],
                    },
                    "values": {
                      "next": [Function],
                      "observers": [
                        {
                          "next": [Function],
                        },
                      ],
                      "subscribe": [Function],
                      "unsubscribe": [Function],
                    },
                  },
                  "_updateDisabledField": [Function],
                  "_updateFieldArray": [Function],
                  "_updateFormState": [Function],
                  "_updateValid": [Function],
                  "getFieldState": [Function],
                  "handleSubmit": [Function],
                  "register": [Function],
                  "setError": [Function],
                  "unregister": [Function],
                }
              }
              focusVisibleStyle={{}}
              focusable={true}
              id=":r0:"
              name="query"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="$Sendtag, Phone, Send ID"
              placeholderTextColor="hsla(191, 32%, 50%, 1)"
              readOnly={false}
              style={
                {
                  "backgroundColor": "hsla(191, 32%, 10%, 1)",
                  "borderBottomColor": "hsla(191, 32%, 32%, 1)",
                  "borderBottomLeftRadius": 9,
                  "borderBottomRightRadius": 9,
                  "borderBottomWidth": 0,
                  "borderLeftColor": "hsla(191, 32%, 32%, 1)",
                  "borderLeftWidth": 0,
                  "borderRightColor": "hsla(191, 32%, 32%, 1)",
                  "borderRightWidth": 0,
                  "borderStyle": "solid",
                  "borderTopColor": "hsla(191, 32%, 32%, 1)",
                  "borderTopLeftRadius": 9,
                  "borderTopRightRadius": 9,
                  "borderTopWidth": 0,
                  "color": "hsl(0, 0%, 93.0%)",
                  "fontFamily": "System",
                  "fontSize": 19.2,
                  "fontStyle": "italic",
                  "fontWeight": "normal",
                  "height": 44,
                  "minWidth": 0,
                  "paddingLeft": 16,
                  "paddingRight": 40,
                  "position": "relative",
                }
              }
              value=""
            />
          </View>
          <View
            style={
              {
                "bottom": 10,
                "gap": 7,
                "position": "absolute",
                "right": 18,
              }
            }
          />
        </View>
      </View>
      <View
        accessibilityLabel="Clear input."
        accessibilityRole="button"
        cancelable={true}
        disabled={false}
        focusVisibleStyle={{}}
        focusable={[Function]}
        minPressDuration={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 1,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 1,
            "borderRightColor": "transparent",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 9,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": 44,
            "justifyContent": "center",
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
            "position": "absolute",
            "right": "0",
            "top": "0",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="32"
          bbWidth="32"
          color="#122023"
          focusable={false}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth="2"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#122023",
                "height": 24,
                "width": 24,
              },
              {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          tintColor="#122023"
          vbHeight={32}
          vbWidth={32}
          width={32}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "strokeWidth",
              ]
            }
            strokeWidth="2"
          >
            <RNSVGPath
              d="M8.30006 25.1004L6.90005 23.7004L14.6001 16.0004L6.90005 8.30039L8.30006 6.90039L16.0001 14.6004L23.7001 6.90039L25.1001 8.30039L17.4001 16.0004L25.1001 23.7004L23.7001 25.1004L16.0001 17.4004L8.30006 25.1004Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`SendScreen should render with search: search 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "gap": 32,
      "paddingBottom": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "flexDirection": "column",
        "gap": 24,
        "width": "100%",
      }
    }
  >
    <Text
      accessibilityRole="header"
      selectable={true}
      style={
        {
          "color": "hsl(0, 0%, 43.5%)",
          "fontFamily": "System",
          "fontSize": 19.2,
          "fontWeight": "400",
          "lineHeight": 21,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      suppressHighlighting={true}
    >
      SEARCH BY
    </Text>
    <View
      style={
        {
          "position": "relative",
        }
      }
      testID="sendSearchContainer"
    >
      <View
        onLayout={[Function]}
        onSubmit={[Function]}
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "flexDirection": "column",
            "gap": 18,
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <View
            animatedStyle={
              {
                "value": {
                  "transform": [
                    {
                      "translateX": 0,
                    },
                  ],
                },
              }
            }
            collapsable={false}
            style={
              {
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <TextInput
              accessibilityLabel="query"
              accessibilityRole="search"
              control={
                {
                  "_defaultValues": {
                    "query": "",
                  },
                  "_disableForm": [Function],
                  "_executeSchema": [Function],
                  "_fields": {
                    "query": {
                      "_f": {
                        "mount": true,
                        "name": "query",
                        "ref": {
                          "name": "query",
                        },
                        "value": "test",
                      },
                    },
                  },
                  "_formState": {
                    "dirtyFields": {
                      "query": true,
                    },
                    "disabled": false,
                    "errors": {},
                    "isDirty": false,
                    "isLoading": false,
                    "isSubmitSuccessful": false,
                    "isSubmitted": false,
                    "isSubmitting": false,
                    "isValid": true,
                    "isValidating": false,
                    "name": "query",
                    "submitCount": 0,
                    "touchedFields": {
                      "query": true,
                    },
                  },
                  "_formValues": {
                    "query": "test",
                  },
                  "_getDirty": [Function],
                  "_getFieldArray": [Function],
                  "_getWatch": [Function],
                  "_names": {
                    "array": Set {},
                    "focus": "",
                    "mount": Set {
                      "query",
                    },
                    "unMount": Set {},
                    "watch": Set {
                      "query",
                    },
                    "watchAll": false,
                  },
                  "_options": {
                    "mode": "onSubmit",
                    "reValidateMode": "onChange",
                    "shouldFocusError": true,
                  },
                  "_proxyFormState": {
                    "dirtyFields": false,
                    "disabled": true,
                    "errors": true,
                    "isDirty": false,
                    "isSubmitting": true,
                    "isValid": true,
                    "isValidating": false,
                    "touchedFields": false,
                  },
                  "_removeUnmounted": [Function],
                  "_reset": [Function],
                  "_resetDefaultValues": [Function],
                  "_state": {
                    "action": false,
                    "mount": true,
                    "watch": false,
                  },
                  "_subjects": {
                    "array": {
                      "next": [Function],
                      "observers": [],
                      "subscribe": [Function],
                      "unsubscribe": [Function],
                    },
                    "state": {
                      "next": [Function],
                      "observers": [
                        {
                          "next": [Function],
                        },
                        {
                          "next": [Function],
                        },
                      ],
                      "subscribe": [Function],
                      "unsubscribe": [Function],
                    },
                    "values": {
                      "next": [Function],
                      "observers": [
                        {
                          "next": [Function],
                        },
                      ],
                      "subscribe": [Function],
                      "unsubscribe": [Function],
                    },
                  },
                  "_updateDisabledField": [Function],
                  "_updateFieldArray": [Function],
                  "_updateFormState": [Function],
                  "_updateValid": [Function],
                  "getFieldState": [Function],
                  "handleSubmit": [Function],
                  "register": [Function],
                  "setError": [Function],
                  "unregister": [Function],
                }
              }
              focusVisibleStyle={{}}
              focusable={true}
              id=":r0:"
              name="query"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="$Sendtag, Phone, Send ID"
              placeholderTextColor="hsla(191, 32%, 50%, 1)"
              readOnly={false}
              style={
                {
                  "backgroundColor": "hsla(191, 32%, 10%, 1)",
                  "borderBottomColor": "hsla(191, 32%, 32%, 1)",
                  "borderBottomLeftRadius": 9,
                  "borderBottomRightRadius": 9,
                  "borderBottomWidth": 0,
                  "borderLeftColor": "hsla(191, 32%, 32%, 1)",
                  "borderLeftWidth": 0,
                  "borderRightColor": "hsla(191, 32%, 32%, 1)",
                  "borderRightWidth": 0,
                  "borderStyle": "solid",
                  "borderTopColor": "hsla(191, 32%, 32%, 1)",
                  "borderTopLeftRadius": 9,
                  "borderTopRightRadius": 9,
                  "borderTopWidth": 0,
                  "color": "hsl(0, 0%, 93.0%)",
                  "fontFamily": "System",
                  "fontSize": 19.2,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "height": 44,
                  "minWidth": 0,
                  "paddingLeft": 16,
                  "paddingRight": 40,
                  "position": "relative",
                }
              }
              value="test"
            />
          </View>
          <View
            style={
              {
                "bottom": 10,
                "gap": 7,
                "position": "absolute",
                "right": 18,
              }
            }
          />
        </View>
      </View>
      <View
        accessibilityLabel="Clear input."
        accessibilityRole="button"
        cancelable={true}
        disabled={false}
        focusVisibleStyle={{}}
        focusable={[Function]}
        minPressDuration={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomLeftRadius": 0,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 1,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 1,
            "borderRightColor": "transparent",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopLeftRadius": 0,
            "borderTopRightRadius": 9,
            "borderTopWidth": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": 44,
            "justifyContent": "center",
            "paddingBottom": 0,
            "paddingLeft": 4,
            "paddingRight": 4,
            "paddingTop": 0,
            "position": "absolute",
            "right": "0",
            "top": "0",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="32"
          bbWidth="32"
          color="#122023"
          focusable={false}
          height={32}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth="2"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#122023",
                "height": 24,
                "width": 24,
              },
              {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          tintColor="#122023"
          vbHeight={32}
          vbWidth={32}
          width={32}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "strokeWidth",
              ]
            }
            strokeWidth="2"
          >
            <RNSVGPath
              d="M8.30006 25.1004L6.90005 23.7004L14.6001 16.0004L6.90005 8.30039L8.30006 6.90039L16.0001 14.6004L23.7001 6.90039L25.1001 8.30039L17.4001 16.0004L25.1001 23.7004L23.7001 25.1004L16.0001 17.4004L8.30006 25.1004Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <RCTScrollView
    scrollEnabled={true}
    style={
      [
        {
          "gap": 32,
          "marginTop": 40,
        },
        {
          "animatedStyle": {
            "current": {},
          },
          "initial": {
            "updater": [Function],
            "value": {
              "opacity": 0,
              "transform": [
                {
                  "translateY": -10,
                },
              ],
              "width": "100%",
            },
          },
          "viewDescriptors": {
            "add": [Function],
            "remove": [Function],
            "shareableViewDescriptors": {
              "_isReanimatedSharedValue": true,
              "_value": [],
              "addListener": [Function],
              "modify": [Function],
              "removeListener": [Function],
              "value": [],
            },
          },
          "viewsRef": {
            "add": [Function],
            "items": Set {},
            "remove": [Function],
          },
        },
      ]
    }
    testID="searchResults"
  >
    <View>
      <View
        style={
          {
            "flexDirection": "column",
            "gap": 16,
          }
        }
      >
        <Text
          accessibilityRole="header"
          selectable={true}
          style={
            {
              "color": "#B3B3B3",
              "fontFamily": "System",
              "fontSize": 19.2,
              "fontWeight": "400",
              "lineHeight": 21,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "textTransform": "uppercase",
            }
          }
          suppressHighlighting={true}
        >
          tag
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 24,
            }
          }
        >
          <View
            style={
              {
                "borderBottomLeftRadius": 10,
                "borderBottomRightRadius": 10,
                "borderTopLeftRadius": 10,
                "borderTopRightRadius": 10,
                "width": "100%",
              }
            }
          >
            <View
              href="/send?idType=tag&recipient=test&amount=test&sendToken=test&note=test"
              testID="MockSolitoLink"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 18,
                  }
                }
                testID="tag-search-3665"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderBottomLeftRadius": 7,
                      "borderBottomRightRadius": 7,
                      "borderTopLeftRadius": 7,
                      "borderTopRightRadius": 7,
                      "flexDirection": "column",
                      "height": 48,
                      "justifyContent": "center",
                      "maxHeight": 48,
                      "maxWidth": 48,
                      "minHeight": 48,
                      "minWidth": 48,
                      "overflow": "hidden",
                      "position": "relative",
                      "width": 48,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "bottom": 0,
                        "flexDirection": "column",
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Image
                      fullscreen={true}
                      onError={[Function]}
                      onLoad={[Function]}
                      source={
                        {
                          "uri": "https://avatars.githubusercontent.com/u/123",
                        }
                      }
                      style={
                        {
                          "height": 48,
                          "width": 48,
                        }
                      }
                      testID="avatar"
                    />
                  </View>
                  <View
                    style={
                      {
                        "bottom": 0,
                        "flexDirection": "column",
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "zIndex": 0,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "borderBottomLeftRadius": 7,
                          "borderBottomRightRadius": 7,
                          "borderTopLeftRadius": 7,
                          "borderTopRightRadius": 7,
                          "flexDirection": "column",
                          "height": 48,
                          "justifyContent": "center",
                          "maxHeight": 48,
                          "maxWidth": 48,
                          "minHeight": 48,
                          "minWidth": 48,
                          "overflow": "hidden",
                          "position": "relative",
                          "width": 48,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "bottom": 0,
                            "flexDirection": "column",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 1,
                          }
                        }
                      >
                        <Image
                          fullscreen={true}
                          onError={[Function]}
                          onLoad={[Function]}
                          source={
                            {
                              "uri": "https://ui-avatars.com/api.jpg?name=test&size=256",
                            }
                          }
                          style={
                            {
                              "height": 48,
                              "width": 48,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "bottom": 0,
                            "flexDirection": "column",
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 0,
                          }
                        }
                      >
                        <Text
                          selectable={true}
                          style={
                            {
                              "color": "hsla(112, 22%, 59%, 1)",
                              "fontFamily": "System",
                              "fontSize": 16.8,
                              "fontWeight": "400",
                              "lineHeight": 19,
                            }
                          }
                          suppressHighlighting={true}
                        >
                          ??
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "flexDirection": "column",
                      "gap": 2,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#B3B3B3",
                        "fontFamily": "System",
                        "fontSize": 24,
                        "fontWeight": "300",
                      }
                    }
                    suppressHighlighting={true}
                  >
                    <Text
                      style={
                        {
                          "color": "#FFFFFF",
                          "fontFamily": "System",
                          "fontWeight": "500",
                        }
                      }
                      suppressHighlighting={true}
                    >
                      test
                    </Text>
                  </Text>
                  <Text
                    style={
                      {
                        "color": "hsla(112, 22%, 59%, 1)",
                        "fontFamily": "System",
                        "fontSize": 16.8,
                      }
                    }
                    suppressHighlighting={true}
                  >
                    @test
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
